--- a/src/application/MainWindow.fxml
+++ b/src/application/MainWindow.fxml
@@ -3,11 +3,12 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <MenuBar layoutY="7.0" prefHeight="246.0" prefWidth="518.0">
+
+<BorderPane xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <MenuBar prefHeight="319.0" prefWidth="518.0" BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="Fichier">
             <items>
@@ -45,5 +46,5 @@
             </Menu>
         </menus>
       </MenuBar>
-   </children>
-</AnchorPane>
+   </top>
+</BorderPane>
