--- a/src/vue/ZoneDessin.fxml
+++ b/src/vue/ZoneDessin.fxml
@@ -3,9 +3,8 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.Controleur">
    <children>
-      <Canvas height="390.0" layoutX="-2.0" layoutY="2.0" width="600.0" />
+      <Canvas height="1200.0" layoutX="-2.0" layoutY="2.0" onMouseDragged="#deplace" onMousePressed="#attrape" onMouseReleased="#lache" width="800.0" />
    </children>
 </AnchorPane>
