--- a/src/vue/MainWindow.fxml
+++ b/src/vue/MainWindow.fxml
@@ -5,13 +5,13 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.menuControl">
+<BorderPane fx:id="bp" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.menuControl">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="Fichier">
             <items>
-              <MenuItem mnemonicParsing="false" text="Ouvrir un projet" />
+              <MenuItem mnemonicParsing="false" onAction="#openFile" text="Ouvrir un projet" />
                   <MenuItem mnemonicParsing="false" text="Créer un nouveau projet" />
                   <MenuItem mnemonicParsing="false" onAction="#fermer" text="Fermer" />
             </items>
