canvas ok need to fix a getControl

--- a/src/vue/MainWindow.fxml
+++ b/src/vue/MainWindow.fxml
@@ -31,7 +31,7 @@
           </Menu>
             <Menu mnemonicParsing="false" text="modifier un élément">
                <items>
-                  <MenuItem mnemonicParsing="false" text="Déplacer" />
+                  <MenuItem mnemonicParsing="false" onAction="#setMove" text="Déplacer" />
                   <MenuItem mnemonicParsing="false" text="Rotation" />
                   <MenuItem mnemonicParsing="false" text="Supprimer" />
                   <MenuItem mnemonicParsing="false" text="Redimensionner" />
