--- a/src/vue/MainWindow.fxml
+++ b/src/vue/MainWindow.fxml
@@ -25,7 +25,7 @@
           <Menu mnemonicParsing="false" text="Ajouter un élément">
             <items>
               <MenuItem mnemonicParsing="false" text="Texte" />
-                  <MenuItem mnemonicParsing="false" text="Formes" />
+                  <MenuItem mnemonicParsing="false" onAction="#editShape" text="Formes" />
                   <MenuItem mnemonicParsing="false" text="Emoji" />
             </items>
           </Menu>
