--- a/src/vue/ShapeEditDialog.fxml
+++ b/src/vue/ShapeEditDialog.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane prefHeight="354.0" prefWidth="439.0" styleClass="background" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.ShapeController">
    <children>
-      <GridPane layoutX="30.0" layoutY="28.0" prefHeight="254.0" prefWidth="404.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+      <GridPane fx:id="gp" layoutX="30.0" layoutY="28.0" prefHeight="254.0" prefWidth="404.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="111.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="316.0" minWidth="10.0" prefWidth="261.0" />
@@ -27,7 +27,7 @@
          <children>
             <Label text="Type" />
             <Label text="Couleur" GridPane.rowIndex="1" />
-            <ComboBox fx:id="type" editable="true" prefWidth="150.0" promptText="Type ?" GridPane.columnIndex="1" />
+            <ComboBox fx:id="type" editable="true" onAction="#handleClick" prefWidth="150.0" promptText="Type ?" GridPane.columnIndex="1" />
             <ComboBox fx:id="color" editable="true" prefWidth="150.0" promptText="Couleur ?" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
       </GridPane>
