--- a/src/vue/MainWindow.fxml
+++ b/src/vue/MainWindow.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="bp" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.menuControl">
+<BorderPane fx:id="bp" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.menuControl">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -33,7 +36,7 @@
                <items>
                   <MenuItem mnemonicParsing="false" onAction="#setSel" text="Selectionner" />
                   <MenuItem mnemonicParsing="false" onAction="#setMove" text="Déplacer" />
-                  <MenuItem mnemonicParsing="false" text="Supprimer" />
+                  <MenuItem mnemonicParsing="false" onAction="#delete" text="Supprimer" />
                   <MenuItem mnemonicParsing="false" text="Redimensionner" />
                   <MenuItem mnemonicParsing="false" text="Couleur" />
                   <MenuItem mnemonicParsing="false" text="Numéro du plan" />
